--- a/Ex10.md
+++ b/Ex10.md
@@ -31,24 +31,47 @@
   
   我们再来看相空间图像，在r=25时：
   z-x图像：
-  ![6](http://7xrn0b.com1.z0.glb.clouddn.com/x_t_r=25.png)
+![6](http://7xrn0b.com1.z0.glb.clouddn.com/z_x_r=25.png)
   y-x图像：
-  ![7](http://7xrn0b.com1.z0.glb.clouddn.com/y_x_r=25.png)
+![7](http://7xrn0b.com1.z0.glb.clouddn.com/y_x_r=25.png)
+  z-y图像：
+![9](http://7xrn0b.com1.z0.glb.clouddn.com/z_y_r=25.png)
   
-  两个比较好看的蝴蝶型图案，可恶意想象，这两个图像的画的过程中是左边（x<0）跑两圈或几圈然后
+  三个比较好看的蝴蝶型图案，可恶意想象，这两个图像的画的过程中是左边（x<0）跑两圈或几圈然后
   在想>0的区域跑一圈。
   
   接下来我们试图寻找类似于二阶非线性受迫阻尼震动中的吸引子，我们画出空间切片的图像，即x=0
   时的z-y图像：
-  ![7](http://7xrn0b.com1.z0.glb.clouddn.com/z_y_x=0.png)
+![7](http://7xrn0b.com1.z0.glb.clouddn.com/z_y_x=0.png)
   
   Y=0时的z-x图像：
-  ![8](http://7xrn0b.com1.z0.glb.clouddn.com/z_x_y=0.png)
+![8](http://7xrn0b.com1.z0.glb.clouddn.com/z_x_y=0.png)
   
   这两个图像同样不受初始值的影响，即不论初始值如何，即使空间-时间关系是不可预测的，我们可以说
   相空间图像一定属于这两幅图像中的一部分。
-  
-  
+  比如我们改取初始值：x=2.y=z=5:
+![10](http://7xrn0b.com1.z0.glb.clouddn.com/z_x_y=0%282%29.png)
+![11](http://7xrn0b.com1.z0.glb.clouddn.com/z_y_x=0%282%29.png)
+
+h和上面两个图像是相同的。
+再来看r取不同的值时相空间图像的变化：
+r=50
+
+![12](http://7xrn0b.com1.z0.glb.clouddn.com/r=50.png)
+r=80
+![13](http://7xrn0b.com1.z0.glb.clouddn.com/r=80.png)
+
+r=120
+![14](http://7xrn0b.com1.z0.glb.clouddn.com/r=120.png)
+
+R=200
+![15](http://7xrn0b.com1.z0.glb.clouddn.com/r=200.png)
+
+可以看到，当r增大时，相空间图像逐渐变得“瘦高”，当r增大偶倒一定程度（具体多少不清楚），
+相空间神奇的出现了分叉，每一支由原来的一支分裂为两支。
+
+## Level2:
+
   
   
   
