--- a/Ex10.md
+++ b/Ex10.md
@@ -1,6 +1,6 @@
 # 第十次作业
 物基一班  李浩波  2013301020029
-## Level 1：
+## Level 1 and level 3：
 ### 摘要：
   考虑另一个混沌的物理现象，即流体的运动，比如在天气的预测方面 ，人们无法准确地给出
   第二天天气的预测，原因就是在计算气体流动的过程中会出现混沌现象，即使吧大气中每个空
@@ -39,6 +39,10 @@
   
   三个比较好看的蝴蝶型图案，可恶意想象，这两个图像的画的过程中是左边（x<0）跑两圈或几圈然后
   在想>0的区域跑一圈。
+更直观地，以三维形式展示r=5和r=25时的xyz关系图像：
+
+![111](http://7xrn0b.com1.z0.glb.clouddn.com/r=5.gif)
+![112](http://7xrn0b.com1.z0.glb.clouddn.com/r=25.gif)
   
   接下来我们试图寻找类似于二阶非线性受迫阻尼震动中的吸引子，我们画出空间切片的图像，即x=0
   时的z-y图像：
