--- a/Ex10.md
+++ b/Ex10.md
@@ -43,7 +43,9 @@
 
 ![111](http://7xrn0b.com1.z0.glb.clouddn.com/r=5.gif)
 ![112](http://7xrn0b.com1.z0.glb.clouddn.com/r=25.gif)
-  
+
+用vpython来展示这个蝴蝶状图案的形成过程
+![144](http://7xrn0b.com1.z0.glb.clouddn.com/vpythonr=25.gif)  
   接下来我们试图寻找类似于二阶非线性受迫阻尼震动中的吸引子，我们画出空间切片的图像，即x=0
   时的z-y图像：
 ![7](http://7xrn0b.com1.z0.glb.clouddn.com/z_y_x=0.png)
