--- a/Ex11.md
+++ b/Ex11.md
@@ -1,1 +1,56 @@
+# 第十一次作业
+   物基一班  李浩波  2013301020029
+## 两体问题：
+### 摘要：
+  这一部分考虑两体问题，从两个物体等质量开始出发，研究他们之间的运动随速度、距离之间
+  的关系，再改变两个物体的质量使他们质量不相等，在此情况下研究他们的运动。本次计算采
+  用euler-crome方法来研究。
+### 正文：
+  由于我们考虑的两体问题中，两个物体的质量是相当的，因此二者之间的作用力即引力必须用
+  质量积/距离平方的形式来表达。为了方便起见，没我们就把引力常数设为1.这样，两体之间的
+  引力就是
+  ![1](http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-13%20%E4%B8%8A%E5%8D%8810.14.16.png)
+将引力分为xy分量计算相应的加速度即可。
+首先，我们来看两体质量相等并且速率相等的情况，动画演示为
+![2](http://7xrn0b.com1.z0.glb.clouddn.com/m=m.gif)
+最后的轨迹集合为
+![3](http://7xrn0b.com1.z0.glb.clouddn.com/m=m.png)
+这个两体运动还是比较稳定的，质量相等，相距为5，如果把距离和速度细调可以达到完全稳定的轨迹
+然后，与以上相同的初始条件名只不过吧两体之间的距离调整为2，即二者之间的吸引力增大了，可以
+想象，二者应该在互相靠近，动态演示为：
+![4](http://7xrn0b.com1.z0.glb.clouddn.com/m=m2-1-1.gif)
+最终轨迹集合为
+![5](http://7xrn0b.com1.z0.glb.clouddn.com/m=m2-1-1.png)
+可以看到，二者之间的运动呈现出明显的不稳定状态，但看一个运动“周期”，二者以一个类似椭圆
+的轨道运动，在相互靠近的过程中加速，距离最近是速度也最快，但是严格来说，二者是以一个螺旋椭
+圆轨道相互靠近的，最终会碰到一起。就是说由于初始距离的减小，是的两体的运动不再稳定。
+咱俩看m1=2m2的情况,首先当二者总动量为零：
 
+![6](http://7xrn0b.com1.z0.glb.clouddn.com/M=2M2.gif)
+![7](http://7xrn0b.com1.z0.glb.clouddn.com/m=2m2.png)
+可见质量大的运动轨迹椭圆小，质量小的轨迹大。二者比较稳定的运动。
+如果二者初始速度反过来，即质量大的速度快，质量小的速度慢，那么：
+![8](http://7xrn0b.com1.z0.glb.clouddn.com/m=2m2-1-1.gif)
+![9](http://7xrn0b.com1.z0.glb.clouddn.com/m=2m2-1-1.png)
+二者运动明显不如前一种情况稳定，但依然可以转起来，即只要引力足够，质量轻的就会绕着质量大的转，
+而质量打的则受影响较质量轻的小。以下随着二者质量车距增大越来越明显。
+在m1=10m2的情况下，首先看二者初始动量和为零时：
+
+![11](http://7xrn0b.com1.z0.glb.clouddn.com/m=10m.gif)
+![12](http://7xrn0b.com1.z0.glb.clouddn.com/m=10m.png)
+和之前一种情况的轨迹相似
+当二者动量和不为零，即m1的速度大于m2时：
+![13](http://7xrn0b.com1.z0.glb.clouddn.com/m=10m2.png)
+这是重者主要沿初始速度方向前进，受另一个物体的作用坐着幅度明显小的螺旋运动，二者运动稳定。
+更加极端的情况：
+m1=100m2
+![14](http://7xrn0b.com1.z0.glb.clouddn.com/m=100m.gif)
+![15](http://7xrn0b.com1.z0.glb.clouddn.com/m=100m.png)
+m1=1000m2
+![16](http://7xrn0b.com1.z0.glb.clouddn.com/m=1000m.gif)
+
+![18](http://7xrn0b.com1.z0.glb.clouddn.com/m=1000m.png)
+m1=10000m2
+![17](http://7xrn0b.com1.z0.glb.clouddn.com/m=10000m.gif)
+1[19](http://7xrn0b.com1.z0.glb.clouddn.com/m=10000m.png)
+可见，当m1远大于m2时，m1不再受m2的影响，而m2则是紧跟m1的步伐绕着他运动.
