--- a/Ex12.md
+++ b/Ex12.md
@@ -1,1 +1,54 @@
+# Ex12:三体问题
+物基一班  李浩波  2013301020029
+## 摘要：
+     继上次作业研究两体问题后，这次研究三体问题。我们选取太阳、木星、和地球来进行三体问题
+ 的研究。来看第三者的加入会有什么不同，并研究第三者质量变化时带来的不同影响。
+## 正文：
+      课本中将太阳固定来研究三体问题，但是通过上一次作业研究两体问题我们知道，如果将太阳固定，是不能得到一
+  个稳定的椭圆轨道的，因为将太阳固定就会消耗系统的能量，两体总会由于引力撞到一起，但是如果将两体问题处理成
+  真正的两体问题，即考虑太阳的运动，则可以得到稳定的轨道，即二者一直相对运动下去而不会相撞。同样的，课本中
+  给出的三体问题也把太阳固定了，这样在木星的质量是太阳的千分之一的情况下，能量损耗尤为明显，得到无规则轨道
+  并不稀奇。于是，我们下面用真正的三体问题的处理方法来研究太阳、木星、地球的运动。也就是三者之间均以万有引
+  力牵引，由万有引力公式来计算，再计算相应的x、y方向的引力得到加速度，之后用euler-crome方法来计算相应的速度
+  和位移的变化。
+      我们依然用宇宙单位来进行计算，即单位时间为一年，单位距离为1.5*10^11m。这样，可以得到通过换算得到地球和
+  木星的速度在宇宙单位下大小为：6.27，2.72，我们不妨设两个初速度相互垂直，为了保证系统的质心的稳定，我们
+  赋予太阳初速度使得形同总动量为零：太阳x方向速度为18.81*10^（-7），y方向速度为2.72*10^（-4）。之后变成进行
+  模拟：
+  首先看太阳、打球和木星均为其真实质量的情况：
+  VPhython演示：
+![1](http://7xrn0b.com1.z0.glb.clouddn.com/m=1m.gif)
+![2](http://7xrn0b.com1.z0.glb.clouddn.com/mmlittle.png)
+
+我们看到，地球和木星都有比较稳定的运动，都没有坠向太阳。木星在做明显的椭圆轨道运动，同时轨道在进动，整体轨道
+形成一个漂亮的对称的花的形状。地球的轨道则没有什么规律，只能说“平均”是个圆，因为地球收到明显的木星的牵引力，
+木星与地球的相对距离影响着地球的运动。
+再来看木星的质量扩大为真实质量的10倍的情况：
+VPython 演示：
+![3](http://7xrn0b.com1.z0.glb.clouddn.com/m=10mj.gif)
+![4](http://7xrn0b.com1.z0.glb.clouddn.com/m=10mj.png)
+
+可以看到，木星的轨道没有什么变化，这是比较容易理解的，因为木星的质量是地球的10000倍，几乎不受地球影响，而太阳
+质量又是木星的100被，依然远远大于木星质量，因此木星相对太阳运动形状变化不大，只是“花”变小了一些。而地球的运动
+则与之前情况截然不同，在木星质量扩大十倍后，地球收到明显的木星引力的作用，开始有比较明显的跟随木星的轨道，这
+时地球没有所谓的轨道了，在太阳和木星的双重引力下运动。
+再来看木星质量扩大100倍的情况：
+VPython 演示：
+![5](http://7xrn0b.com1.z0.glb.clouddn.com/m=100mj.gif)
+![6](http://7xrn0b.com1.z0.glb.clouddn.com/m=100mj.png)
+
+可以看出，木星轨道形状依然没有改变，只是小了一些，而地球则是“紧跟”木星运动。
+再来看木星质量扩大1000倍的情况，这时木星和太阳的质量是差不多相等的：
+VPython演示：
+![7](http://7xrn0b.com1.z0.glb.clouddn.com/m=1000mj.gif)
+![8](http://7xrn0b.com1.z0.glb.clouddn.com/m=1000mj.png)
+
+这种情况下，可以看出太阳已经有明显的运动，木星的轨道形状依然没变，地球则是呈现出“乱窜”的情况。
+
+
+
+
+
+
+
 
