--- a/Ex12.md
+++ b/Ex12.md
@@ -18,6 +18,7 @@
   模拟：
   
   首先看太阳、打球和木星均为其真实质量的情况：
+  
   VPhython演示：
 ![1](http://7xrn0b.com1.z0.glb.clouddn.com/m=1m.gif)
 ![2](http://7xrn0b.com1.z0.glb.clouddn.com/mmlittle.png)
@@ -25,7 +26,9 @@
 我们看到，地球和木星都有比较稳定的运动，都没有坠向太阳。木星在做明显的椭圆轨道运动，同时轨道在进动，整体轨道
 形成一个漂亮的对称的花的形状。地球的轨道则没有什么规律，只能说“平均”是个圆，因为地球收到明显的木星的牵引力，
 木星与地球的相对距离影响着地球的运动。
+
 再来看木星的质量扩大为真实质量的10倍的情况：
+
 VPython 演示：
 ![3](http://7xrn0b.com1.z0.glb.clouddn.com/m=10mj.gif)
 ![4](http://7xrn0b.com1.z0.glb.clouddn.com/m=10mj.png)
@@ -34,18 +37,23 @@ VPython 演示：
 质量又是木星的100被，依然远远大于木星质量，因此木星相对太阳运动形状变化不大，只是“花”变小了一些。而地球的运动
 则与之前情况截然不同，在木星质量扩大十倍后，地球收到明显的木星引力的作用，开始有比较明显的跟随木星的轨道，这
 时地球没有所谓的轨道了，在太阳和木星的双重引力下运动。
+
 再来看木星质量扩大100倍的情况：
+
 VPython 演示：
 ![5](http://7xrn0b.com1.z0.glb.clouddn.com/m=100mj.gif)
 ![6](http://7xrn0b.com1.z0.glb.clouddn.com/m=100mj.png)
 
 可以看出，木星轨道形状依然没有改变，只是小了一些，而地球则是“紧跟”木星运动。
+
 再来看木星质量扩大1000倍的情况，这时木星和太阳的质量是差不多相等的：
+
 VPython演示：
 ![7](http://7xrn0b.com1.z0.glb.clouddn.com/m=1000mj.gif)
 ![8](http://7xrn0b.com1.z0.glb.clouddn.com/m=1000mj.png)
 
-这种情况下，可以看出太阳已经有明显的运动，木星的轨道形状依然没变，地球则是呈现出“乱窜”的情况。
+这种情况下，可以看出太阳已经有明显的运动，木星的轨道形状依然没变，地球则是呈现出“乱窜”的情况。仔细看可以发现，
+地球依然是跟随木星运动的，只是运动轨迹非常细长，在两个太阳的引力下，地球的运动显得不知所措。
 
 
 
