--- a/Ex13.md
+++ b/Ex13.md
@@ -4,11 +4,28 @@
 本次作业来处理平行板电容器的问题，分别用Jacobi methon 和SOR method 来求解，并比较两种计算方式的异同。
 ## 正文：
 ### 问题描述：
-如下图的二维电容器，电容器和电场被限制在一个方形区域内，并且已知两块板上的电势分别为1何-1，边界上的
+如下图的二维电容器，
+
+!(1)[http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-22%20%E4%B8%8B%E5%8D%888.43.58.png]
+
+电容器和电场被限制在一个方形区域内，并且已知两块板上的电势分别为1何-1，边界上的
 电势为0，我们通过两种方法来求解其他部分的电势，分别是Jacobi method 和SOR 法，他们的逐步逼近的方法分
 别是
 
+!(2)[http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-22%20%E4%B8%8B%E5%8D%888.42.13.png]
+
+即某一点的新的电势有原来的电势以及周围电势决定
+而SOR方法是
+
+!(3)[http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-22%20%E4%B8%8B%E5%8D%888.42.39.png]
+
+即每一店的新电势由最新生成的新电势以及周围的最新生成的电势决定，并且为了更快的逼近稳定值，我们如下处理
+
+!(4)[http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-22%20%E4%B8%8B%E5%8D%888.42.56.png]
+!(5)[http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-22%20%E4%B8%8B%E5%8D%888.43.03.png]
+!(6)[http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-22%20%E4%B8%8B%E5%8D%888.43.10.png]
+
+
+
 !()[]
 !()[]
-!()[]
-!()[]!()[]
