--- a/ex13.md
+++ b/ex13.md
@@ -8,7 +8,7 @@
 
 ![1](http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-22%20%E4%B8%8B%E5%8D%888.43.58.png)
 
-电容器和电场被限制在一个方形区域内，并且已知两块板上的电势分别为1何-1，边界上的
+  电容器和电场被限制在一个方形区域内，并且已知两块板上的电势分别为1何-1，边界上的
 电势为0，我们通过两种方法来求解其他部分的电势，分别是Jacobi method 和SOR 法，他们的逐步逼近的方法分
 别是
 
@@ -19,19 +19,44 @@
 
 ![3](http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-22%20%E4%B8%8B%E5%8D%888.42.39.png)
 
-即每一店的新电势由最新生成的新电势以及周围的最新生成的电势决定，并且为了更快的逼近稳定值，我们如下处理
+  即每一店的新电势由最新生成的新电势以及周围的最新生成的电势决定，并且为了更快的逼近稳定值，我们如下处理
 
 ![4](http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-22%20%E4%B8%8B%E5%8D%888.42.56.png)
 ![5](http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-22%20%E4%B8%8B%E5%8D%888.43.03.png)
 ![6](http://7xrn0b.com1.z0.glb.clouddn.com/%E5%B1%8F%E5%B9%95%E5%BF%AB%E7%85%A7%202016-05-22%20%E4%B8%8B%E5%8D%888.43.10.png)
 
+  如此处理可使逼近步骤大大减少，快速达到稳定状态。
+### 程序运行：
+  两个程序运用的矩阵设计是一样的，平行板占据矩阵两列中的一部分，长度为矩阵行数的三分之一；平行板的位置
+为矩阵的第四分之一列和四分之三列。因此没了对称性的考虑，在设矩阵大小时，将行数=列数设为12的倍数。当新
+旧矩阵的差的每个矩阵元都小于0.00001时，叫停程序，同时输出迭代次数。
+
+两种方法运行得到的最终稳定结果是一样的
+
+当L=12时，得到的位置——电势三维图为
+![7](http://7xrn0b.com1.z0.glb.clouddn.com/l=12.png)
+
+动态展示：
+![8](http://7xrn0b.com1.z0.glb.clouddn.com/l=12.gif)
+
+当L=24时，得到的位置-电势三维图为
+![9](http://7xrn0b.com1.z0.glb.clouddn.com/l=24.png)
+
+动态展示：
+![10](http://7xrn0b.com1.z0.glb.clouddn.com/l=24.gif)
+
+当L=48时，位置-电势三维图为
+![12](http://7xrn0b.com1.z0.glb.clouddn.com/l=48.png)
+
+动态展示：
+![13](http://7xrn0b.com1.z0.glb.clouddn.com/l=48.gif)
+
+可以看到，程序运行结果是一个中心对称的空心山峰，并且，L越大，曲面越平滑。两山峰交界处电势为0.
+这些图片和课本上给出的例图一致。
+### L和迭代次数的关系：
+在新旧矩阵的差距缩小为0.00001时，叫停程序并输出迭代次数，我们分别运行两种方法的程序，记录每个
+L对应的迭代次数，列表为：
 
 
-![]()
-![]()
-![]()
-![]()
-![]()
-![]()
 ![]()
 ![]()
