--- a/ex13.md
+++ b/ex13.md
@@ -58,5 +58,17 @@
 L对应的迭代次数，列表为：
 
 
+|    L    |12|24|36|48|60|72|84|96|108|120|132|144|
+|---------|:-:|:-:|:--:|:--:|:--:|:--:|:--:|:--:|:---:|:---:|:---:|:---:|
+|   L*L   |144|526|1296|2304|3600|5184|7056|9216|11664|14400|17424|20736|
+|N(Jacobi)|50 |169|342 | 575| 851|1163|1508|1182| 2280| 2700| 3139| 3595|
+|N(SOR)   |26 |53 |77  |105 |129 |158 |184 |209 |236  |262  |286  |313  |
+
+
+
+
+
+
+
 ![]()
 ![]()
