--- a/ex13.md
+++ b/ex13.md
@@ -64,11 +64,13 @@ L对应的迭代次数，列表为：
 |N(Jacobi)|50 |169|342 | 575| 851|1163|1508|1182| 2280| 2700| 3139| 3595|
 |N(SOR)   |26 |53 |77  |105 |129 |158 |184 |209 |236  |262  |286  |313  |
 
+做出Jacobi方法的L-N图像为;
 
+![14](http://7xrn0b.com1.z0.glb.clouddn.com/L-iteraction-j.png)
 
+做出L*L-N的图像为：
 
+![15](http://7xrn0b.com1.z0.glb.clouddn.com/LL-ite.png)
 
-
-
-![]()
-![]()
+由图像可以看到，用Jacobi方法的计算要达到稳态所需的迭代步数和L的平方成正比，用SOR方法达到稳定的迭
+代步数和L成正比，这就说明了SOR方法大大加快了逼近稳态的速度，大大减小了计算量。
