--- a/ex13.md
+++ b/ex13.md
@@ -72,5 +72,6 @@ L对应的迭代次数，列表为：
 
 ![15](http://7xrn0b.com1.z0.glb.clouddn.com/LL-ite.png)
 
-由图像可以看到，用Jacobi方法的计算要达到稳态所需的迭代步数和L的平方成正比，用SOR方法达到稳定的迭
-代步数和L成正比，这就说明了SOR方法大大加快了逼近稳态的速度，大大减小了计算量。
+由图像可以看到，两个图像在很小的误差内成一条直线，用Jacobi方法的计算要达到稳态所需的迭代步数和L的
+平方成正比，用SOR方法达到稳定的迭代步数和L成正比，这就说明了SOR方法大大加快了逼近稳态的速度，大大
+减小了计算量，同时也验证了课本中提到的问题。
